# Computer-Vision

./: .gitignore  CMakeLists.txt  build  centroid.cpp  centroid.hpp  clean  filter.cpp  filter.hpp  histogram.cpp  histogram.hpp  histogram_group.cpp  histogram_group.hpp  histogram_knn.cpp  histogram_knn.hpp  kmeans.cpp  kmeans.hpp  main.cpp  slic.cpp  slic.hpp  testing_images.txt  training_images.txt
segmentation/: segmentation
